--- a/4-1-1/makefile
+++ b/4-1-1/makefile
@@ -1,8 +1,8 @@
-shapes: shapes.o main.o
-	g++ -o shapes main.o shapes.o
+simple_shape: shapes.o main.o
+	g++ -o simple_shape main.o shapes.o
 shapes.o: shapes.cpp
 	g++ -c shapes.cpp
 main.o: main.cpp 
 	g++ -c main.cpp
 clean: 
-	rm shapes shapes.o main.o
+	rm simple_shape shapes.o main.o
